Self/mydevorg/packaged/TimbaSurveys/objects/Recipient__c.object
<CustomObject>
    <fields>
        <fullName>Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateSendInvitation__c</fullName>
        <description>This is the date when the invitation was send to recipient.</description>
        <label>Date Send Invitation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <label>IPAddress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvitationPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InvitationPending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvitationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InvitationSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPortalUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Publish_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish In Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContactName__c</fullName>
        <label>RelatedContactName</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedObjectId__c</fullName>
        <label>RelatedObjectId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary_Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WhoId__c</fullName>
        <label>WhoId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAnonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAnonymous</label>
        <type>Checkbox</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>